# uemacs

./: .gitignore  Dockerfile  Makefile  Makefile.am  README.md  build-win.cmd  configure.ac
.github/workflows/: uemacs.yml
src/: Makefile.am  basic.c  buffer.c  cinfo.c  def.h  display.c  echo.c  extend.c  file.c  kbd.c  line.c  main.c  random.c  region.c  search.c  symbol.c  version.c  window.c  word.c
src/sys/atari/: c.bat  fileio.c  getn.s  spawn.c  sysdef.h  ttyio.c  xemacs.bat  xemacs.inp
src/sys/cpm86/: fileio.c  spawn.c  sysdef.h  ttyio.c
src/sys/msdos/: fileio.c  putline.asm  putline.s  spawn.c  sysdef.h  ttyio.c
src/sys/ultrix/: Makefile  spawn.c  ttyio.c
src/sys/unix/: Makefile  fileio.c  spawn.c  sysdef.h  ttyio.c
src/sys/vms/: fileio.c  spawn.c  sysdef.h  ttyio.c  uemacs.mms
src/sys/windows/: config.h  fileio.c  spawn.c  sysdef.h  ttyio.c  uemacs.sln  uemacs.vcxproj  uemacs.vcxproj.filters
src/tty/ansi/: tty.c  ttydef.h  ttykbd.c
src/tty/atari/: tty.c  ttydef.h  ttykbd.c
src/tty/heath/: tty.c  ttydef.h  ttykbd.c
src/tty/windows-console/: tty.c  ttydef.h  ttykbd.c
