# Written by Joachim Wiberg <troglobit@gmail.com> and put in the public domain.
AC_INIT([MicroEMACS], [30],, [uemacs], [https://github.com/troglobit/uemacs/])
AC_CONFIG_AUX_DIR(aux)
AM_INIT_AUTOMAKE([1.11 foreign subdir-objects])
AM_SILENT_RULES([yes])

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADER([src/config.h])
AC_CONFIG_FILES([Makefile src/Makefile])

AC_PROG_CC
AC_PROG_INSTALL

AC_OUTPUT
